--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -1,15 +1,18 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist/main",
-    "module": "ESNext",
     "target": "ES2020",
     "lib": ["ES2020"],
+    "module": "ESNext",
     "moduleResolution": "node",
+    "outDir": "dist/main",
     "allowImportingTsExtensions": false,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": false,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": ["src/main/**/*"],
+  "include": ["src/main/**/*", "src/types/**/*"],
   "exclude": ["src/renderer/**/*", "node_modules", "dist"]
 }
