--- a/tsconfig.preload.json
+++ b/tsconfig.preload.json
@@ -1,13 +1,17 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/preload",
-    "module": "CommonJS",
+    "rootDir": "src/preload",
+    "module": "commonjs",
     "target": "ES2020",
     "lib": ["ES2020"],
     "moduleResolution": "node",
-    "allowImportingTsExtensions": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "noEmit": false,
+    "strict": true,
+    "skipLibCheck": true,
     "jsx": "preserve"
   },
   "include": ["src/preload/**/*"],
