--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ffmpeg-frontend",
   "version": "1.0.0",
   "description": "A user-friendly desktop application for FFmpeg operations",
-  "main": "dist/main/main.js",
+  "main": "dist/main/main/main.js",
   "type": "module",
   "scripts": {
-    "dev": "npm run build:preload && concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
+    "dev": "npm run build:electron && npm run build:preload && concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
     "dev:vite": "vite",
     "dev:electron": "wait-on http://localhost:5173 && electron .",
     "build": "npm run build:vite && npm run build:electron && npm run build:preload",
