--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build:electron": "tsc -p tsconfig.main.json",
     "build:preload": "tsc -p tsconfig.preload.json",
     "package": "npm run build && electron-builder",
+    "package:win": "npm run build && electron-builder --win",
+    "package:linux": "npm run build && electron-builder --linux",
+    "package:all": "npm run build && electron-builder --win --linux",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "type-check": "tsc --noEmit"
@@ -24,7 +27,15 @@
     "converter",
     "desktop"
   ],
-  "author": "FFmpeg Frontend Team",
+  "author": {
+    "name": "FFmpeg Frontend Team",
+    "email": "team@ffmpegfrontend.com"
+  },
+  "homepage": "https://github.com/ffmpeg-frontend/ffmpeg-frontend",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ffmpeg-frontend/ffmpeg-frontend.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -50,8 +61,8 @@
     "zustand": "^4.4.7"
   },
   "build": {
-    "appId": "com.ffmpegfrontend.app",
-    "productName": "FFmpeg Frontend",
+    "appId": "com.massiffmpeg.app",
+    "productName": "massiffmpeg",
     "directories": {
       "output": "release"
     },
@@ -59,14 +70,23 @@
       "dist/**/*",
       "package.json"
     ],
-    "mac": {
-      "category": "public.app-category.video"
+    "extraMetadata": {
+      "main": "dist/main/main/main.js"
     },
     "win": {
+      "icon": "assets/icon.svg",
       "target": "nsis"
     },
     "linux": {
-      "target": "AppImage"
+      "icon": "assets/icon.svg",
+      "category": "AudioVideo",
+      "target": "AppImage",
+      "desktop": {
+        "Name": "FFmpeg Frontend",
+        "Comment": "A user-friendly desktop application for FFmpeg operations",
+        "Categories": "AudioVideo;Video;Audio;",
+        "MimeType": "video/mp4;video/avi;video/mkv;video/mov;video/wmv;video/flv;video/webm;audio/mp3;audio/wav;audio/flac;audio/aac;audio/ogg;"
+      }
     }
   }
 }
