--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "desktop"
   ],
   "author": {
-    "name": "FFmpeg Frontend Team",
-    "email": "team@ffmpegfrontend.com"
+    "name": "M4ss1ck"
   },
-  "homepage": "https://github.com/ffmpeg-frontend/ffmpeg-frontend",
+  "homepage": "https://github.com/M4ss1ck/ffmpeg-frontend",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ffmpeg-frontend/ffmpeg-frontend.git"
+    "url": "https://github.com/M4ss1ck/ffmpeg-frontend.git"
   },
   "license": "MIT",
   "devDependencies": {
@@ -82,7 +81,7 @@
       "category": "AudioVideo",
       "target": "AppImage",
       "desktop": {
-        "Name": "FFmpeg Frontend",
+        "Name": "massiffmpeg",
         "Comment": "A user-friendly desktop application for FFmpeg operations",
         "Categories": "AudioVideo;Video;Audio;",
         "MimeType": "video/mp4;video/avi;video/mkv;video/mov;video/wmv;video/flv;video/webm;audio/mp3;audio/wav;audio/flac;audio/aac;audio/ogg;"
